Java 16 + works with updated engine